styles.css
/* __Fonts__ 
'DM Serif Display', serif;
'Lato', sans-serif; */
@import url('https://fonts.googleapis.com/css2? family= DM+Serif+Display & family= Lato:wght@100;300;400;700 & display=swap');

:root{
    --pink:#F2708B;
    --bronw: #542d24;
    --black: #121212;
    --dark-gray:#323232; 
    --gray:#666666;
    --soft-gray:#F4F4F4;
    --soft-white: #fffef9;
    --white:#ffffff;
    --font-lato:'Lato', sans-serif;
    --font-dm:'DM Serif Display', serif; 
}

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    text-decoration: none;
    list-style: none;
}

body{
    min-height: 100vh;
    background-color: var(--white);
    
}

/* __Style Guide__ */
h1{
    font-family: var(--font-dm);
    font-size: 48px;
    font-weight: 400;
    padding-bottom: 16px;
}
h2{
    font-family: var(--font-dm);
    font-size: 36px;
    font-weight: 400;
    padding-bottom: 16px;
}
h3{
    font-family: var(--font-lato);
    font-size: 24px;
    font-weight: 400;
    padding-bottom: 8px;
}
h4{
    font-family: var(--font-lato);
    font-size: 18px;
    font-weight: 400;
    padding-bottom: 8px;
}

p{
    font-family: var(--font-lato);
    font-size: 16px;
    font-weight: 400;
    padding-top: 10px;
}

span{
    color: var(--pink);
}

/* __Components__ */
/* incluir el header y footer aqui que se repiten en todas las secciones */

.cta{
    background-color: var(--pink);
    color: var(--white);
    font-family: var(--font-lato);
    font-size: 16px;
    font-weight: 400;
    letter-spacing: 0.5px;
    padding: 13px 24px;
    border-radius: 50px;
    border: 2px solid transparent;
}
.cta:hover{
    background-color: var(--black);
    color: var(--white);
    border: 2px solid rgb(255, 159, 175);
    cursor: pointer;
}

/* _______HEADER_______ */

.header{
    background-color: #fffef9;
    display: flex;
    justify-content: space-between;
    align-items: center; 
    height: 100px;
    padding: 5px 10px;


}

.header .logo{
    cursor: pointer;
}

.header .logo img{
    height: 70px;
    width: auto;
    margin-left: 50px;
    margin-top: 10px;
    transition: all 0.3s;     
}

.header .logo img:hover{
    transform: scale(1.2);
}

.header .nav .list{
    width: max-content;
}

.nav-links li{
    display: inline-block;
    padding-left: 20px;

}

.nav-links li:hover{
    transform: scale(1.1) ;
}

.nav-links a{
    font-size: 16px;
    font-weight: 400;
    font-family: 'Lato', sans-serif;
    color: #373737; 
    
}

.nav-links li a:hover{
    color: #F2708B;
}

.usershop{
    height: auto;
    width: 100px;
    display: flex;
    justify-content:space-between;
    margin-right: 50px;
    padding-right: 20px;    
}


.bars{
    color: #F2708B;
    background: none;
    border: none;
    font-size: 24px;
    padding: 0 20px;
    line-height: 60px;
    display: none;
    transition: all 0.5s ease;
}

.mobile-nav-wrapper {
    width: 100vw;
    position: relative;
    overflow-x: hidden;
}
#header-mobile {
    min-width: 400px;
    background: var(--soft-white);
    height: 100%;
    position: fixed;
    right: 0;
    transition: 0.5s;
}
#header-mobile .nav-links{
    display: flex;
    flex-direction: column;
    text-align: right;
    margin: 20px;
    padding: 20px 20px 0 0;
}

#header-mobile li {
    margin-bottom: 15px;
}

#header-mobile a {
    font-size: 1.5rem;
}
.hide-mobile-nav {
    right: -100% !important;
}
/* __Main__ */

.content-bienvenida{
    height: 100px;
    width: 600px;
    padding-top: 150px;
    padding-left: 50px;
 }


 /* .....baner home..... */

 .bienvenida{
    height: 100vh;
    width: 100%;
    background-image: url(img/banner-main.png);
    background-size: cover;
    background-position: center;
    background-color: pink;
 }

 .title-secon{
    color: var(--soft-gray);
 }

 .title-principal{
    color: var(--white);
    padding-bottom: 20px;
 }

 /* __Value label__ */

 .label-home{
    width: 100%;
    height: auto;
}

.label-items{
    display: flex;
    justify-content: space-around;
    align-items:center;
    filter: grayscale(100%);  
}

 /* ___Secciones: Home___ */

 /* --About-- */

.about{
    width: 100%;
    height: auto;
    margin-top: 50px;
    margin-bottom: 50px;
}

.content-about{
    padding: 20px;
}
.title-principal-about{
    text-align: center;
    color: var(--bronw);
}

.title-secon-about{
    text-align: center;
    color: var(--pink);
}

.p-about{
    text-align: center;
    line-height: 20px;
    padding-left: 200px;
    padding-right: 200px;
    padding-bottom: 20px;
    color: var(--dark-gray);   
}

.about-parallax{
    background: fixed no-repeat 50% 50% url(img/mangacafe.jpeg);
    background-size: cover;
    background-position: center;
    background-color: pink;
    border-radius: 3px;
    height: 500px;
    width: 70%;
    margin: 10px auto;
    margin-bottom: 50px;

}

.about span{
    color: var(--pink);
}

/* --Destacado-- */
.destacado-home{
    background-color:var(--white);
    display: grid;
    grid-template-columns: repeat(2, 2fr);
    align-items: center;
    height: auto;
    width: 100%;
    grid-gap: 30px;
    
}

.destacado-home img{
    width: 100%;
    height: auto;
    background-size: cover;
    background-position: center;
    
}

.destacado-text{
    width: 90%;
    padding-left: 40px;
      
}

.destacado-text h2{
    color: var(--bronw);
    font-size: 55px;
    padding-bottom: 40px;
}

.destacado-text h4{
    color: var(--pink);
}

/* __galeria___ */

.galeria{
    background-color: var(--white);
    height: auto;
    width: 100%;
    display: grid;
    grid-template-columns: 1fr ;
    grid-template-rows: repeat(8, 200px);
    grid-gap: 20px;
    padding: 20px;
    margin-top: 80px;
    margin-bottom: 100px;

}

.item{
  width: 100%;
  border-radius: 2px;
} 


/* .item:hover{
    transform: scale(1.05);
    transition: all 1.5s;
    filter: grayscale(100%);
} */

.item1{
    background-color: var(--white);
    padding-top: 20px;
    padding-left: 20px;

}

.item1 h2{
    font-size: 28px; 
}
/* ... */

